syntax = "proto3";
package petrichor.petrichor;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "petrichor/params.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/petrinetwork/petrichor/x/petrichor/types";

// key: denom value: PetrichorAsset
message PetrichorAsset {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;

  // Denom of the asset. It could either be a native token or an IBC token
  string denom      = 1 [(gogoproto.moretags) = "yaml:\"denom\""];
  // The reward weight specifies the ratio of rewards that will be given to each petrichor asset
  // It does not need to sum to 1. rate = weight / total_weight
  // Native asset is always assumed to have a weight of 1.s
  string reward_weight = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // A positive take rate is used for liquid staking derivatives. It defines an rate that is applied per take_rate_interval
  // that will be redirected to the distribution rewards pool
  string take_rate = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  string total_tokens = 4 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false
  ];
  string total_validator_shares = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Timestamp reward_start_time = 6 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable)   = false
  ];
  string reward_change_rate = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Duration reward_change_interval = 8 [
    (gogoproto.nullable)   = false,
    (gogoproto.stdduration) = true
  ];
  google.protobuf.Timestamp last_reward_change_time = 9 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable)   = false
  ];
}

message RewardWeightChangeSnapshot {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;

  string prev_reward_weight = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  repeated RewardHistory reward_histories = 2 [
    (gogoproto.nullable)   = false
  ];
}